 - Add Menus 1 Date Segrate List
 - Layaway Reports Sort by Date
 - Add Branch Address in Maintenance
 - Fix No Segre in Outstanding
 - Fix Segre List
 - Added Monitoring for OPT
 - Added Function for Deleting Wrong Item in Inventory
 - Added Log for Tampered Item Master, Invalid Hot Code of IMD & STO 
 - Added Separated OPT Generator
 - Change Inventory Merchandise Sap Account

Version 1.5.0.4
 - Added Icon
 - Added SMS Module for Expiry Items
 - Added TABLE SMS
 - Added Insurance in OR Layout
 - Added Separated OTP
 - Added Insurance in pawning
 - Added Branch Address Option in Settings
 - Added LayAway Module
 - Added Function if Full Paid Record to Inventory Sales
 - Added Layaway List Report (Active layaway)
 - Can ReSend Failed Sending
 - Fix Wrong Journal in Layaway Penalty
 - Fix Different Control # for STO, Inv, Return
 - Added Inventory Adjustment
 - Modify Pawn_List VIEW

Version 1.4.1.15
 - Added Tables INV, INVLINES
 - Added Tables ITEMMASTER, DOC, DOCLINES
 - Added Journal in Insurance Close Store
 - Add InvoiceNum, STONum, SalesReturnNum and CustomerCode at TBLMAINTENACE
 - Add field SALESID and COSTID at TBLITEM
 - Add view STOCK_CARD
 - Add Reports - Inventory Report, Sales Report, Stockout Report
 - Add Tools - Sales Extractor
 - Add new privileges
 - Added Journal in Insurance Close Store
 - Add New Report Stock In and Montly Report For Sales Transaction
 - Update TBLCASH and TBLITEM
 - Can transact SALES, AUCTION REDEEM, IMD, STOCK IN/OUT (Item Pullout is not included here, use the Pullout Module)
 - Can Generate SAP Template Based STO for STOCK OUT
 - Can include void in Sales Transaction
 - Change DB Version 1.2.3.2
 - Change System name into Dalton - Integrated System
 - HOLDS AUCTION REDEEM at TBLCASH
 - Remove Insurance on JE and CashCount
 - Fix Minor Problems in Company Encryption
 - Fix Selling Price from 2 decimal places into 6
 - Fix missing "Appraiser By" in PT
 - Fix on Re-Transact with 0 selling price having wrong computation